WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45932
Crash due to timer triggered GC occuring while other global data is active
https://bugs.webkit.org/show_bug.cgi?id=45932
Summary
Crash due to timer triggered GC occuring while other global data is active
Oliver Hunt
Reported
2010-09-16 16:09:41 PDT
Crash due to timer triggered GC occuring while other global data is active
Attachments
Patch
(5.38 KB, patch)
2010-09-16 16:29 PDT
,
Oliver Hunt
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-09-16 16:29:22 PDT
Created
attachment 67859
[details]
Patch
Geoffrey Garen
Comment 2
2010-09-16 16:38:23 PDT
Comment on
attachment 67859
[details]
Patch r=me APIEntryShim is probably a better abstraction to use here. It's pretty subtle when you should use JSLock vs APIEntryShim. We should work to clear that up in the future.
Oliver Hunt
Comment 3
2010-09-16 18:19:08 PDT
Committed
r67683
: <
http://trac.webkit.org/changeset/67683
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug